--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  xml: ^6.0.0
+  # path_provider: ^2.0.11
 
   # UI Components
   cupertino_icons: ^1.0.8
@@ -54,4 +56,3 @@ flutter:
   
   assets:
     - assets/.env
-
